--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
     "ws": "^8.18.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "cors": "^2.8.5"
   }
 }
 
